Kubernetes/fplms-notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fplms-notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fplms-notificationservice
  template:
    metadata:
      labels:
        app: fplms-notificationservice
    spec:
      containers:
        - name: fplms-notificationservice
          image: quachhengtony/fplms-notificationservice:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fplms-notificationservice-clusterip
spec:
  type: ClusterIP
  selector:
    app: fplms-notificationservice
  ports:
    - name: fplms-notificationservice
      protocol: TCP
      port: 8080
      targetPort: 8080
